--- a/.gitconfig
+++ b/.gitconfig
@@ -10,3 +10,16 @@
 	insteadOf = git://
 [push]
 	default = simple
+[alias]
+	cm = commit -am
+	c = commit -am
+	ci = commit
+	br = branch
+	co = checkout
+	df = diff
+	dc = diff --cached
+	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+	who = shortlog -s --
+	l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+	a = add -A .
+	s = status
